--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,1 +1,34 @@
-<footer></footer>
+<footer class="footer">
+  <div class="footer__networks">    
+      <div class="footer__networks_social _conteiner">
+        <a href="#" class="footer__networks_img">
+          <img src="../img/Ellipse.svg" alt="YouTube" />
+          <img class="youtube" src="../img/youtube.svg" alt="YouTube" />
+        </a>
+        <a href="#" class="footer__networks_img">
+          <img src="../img/Ellipse.svg" alt="VK" />
+          <img class="vk" src="../img/vk.svg" alt="VK" />
+        </a>
+        <a href="#" class="footer__networks_img">
+          <img src="../img/Ellipse.svg" alt="facebook" />
+          <img class="facebook" src="../img/facebook-logo.svg" alt="facebook" />
+        </a>
+        <a href="#" class="footer__networks_img">
+          <img src="../img/Ellipse.svg" alt="instagram" />
+          <img class="instagram" src="../img/instagram.svg" alt="instagram" />
+        </a>
+        <div class="footer__networks_address">
+          198555, Невский пр. 140, офис 140
+        </div>
+        <a href="tel:88121234567" class="footer__networks_tel">8 (812) 123-45-67</a>
+        <button class="footer__networks_btn">Обратный звонок</button>
+      </div>   
+  </div>
+  <div class="footer__license">
+    <div class="footer__license_content  _conteiner">
+      <div>Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования для салонов красоты</div>
+      <div>Политика конфиденциальности</div>
+    </div>
+  </div>
+  <div></div>
+</footer>
