--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,7 +1,36 @@
 <header class="header">
-  <div class="header_content _conteiner">
-    <div class="header_menu menu">
-      Новый проект!!
+  <div class="header__help-menu">
+    <nav class="header__nav-help _conteiner">
+      <ul>
+        <li>Доставка</li>
+        <li>Оплата</li>
+        <li>Отзывы</li>
+        <li>Вопрос-ответ</li>
+        <li>Контакты</li>
+      </ul>
+    </nav>
+  </div>
+  <div class="header__content">
+    <div class="header__menu _conteiner">
+      <a href="#" class="header__menu_logo">
+        <img src="./img/logo.png" alt="" />
+        <h1>BEAUTY</h1>
+      </a>
+      <div class="header__menu_tel">
+        <a href="tel:89005555555">8 (900) 555 55 55</a>
+        <button>Обратный звонок</button>
+      </div>
     </div>
+  </div>
+  <div class="header__main-menu">
+    <nav class="header__nav-main _conteiner">
+      <ul>
+        <li>Парикмахерская</li>
+        <li>Барбершоп</li>
+        <li>Маникюр</li>
+        <li>Педикюр</li>
+        <li>Мебель</li>
+      </ul>
+    </nav>
   </div>
 </header>
