--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 
 @@include('html/head.html', {
-    "title":"Document"
+    "title":"BEAUTY"
 })
 <body>
-    @@include('html/header.html', {})
-    <main>
-    </main>
-    @@include('html/footer.html', {})
+    <div class="wrapper">
+
+        @@include('html/header.html', {})
+        
+        @@include('html/main.html', {})
+        
+        @@include('html/footer.html', {})
+    </div>
     <script src="js/app.min.js"></script>
 </body>
 </html>
